commit pompom-sbt ver 0.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,21 @@
 .history
 .lib/
 dist/*
-target/
 lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+logs/
+project/*-shim.sbt
+project/project/
+project/target/
+target/
 
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+.idea/
+
+# project
+/pom.xml
+/pompom-sbt-*.jar
